# ghostprompter

./: .gitignore  AGENTS.md  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vitest.config.ts
.factory/: init.sh  services.yaml
docs/: VAL-CROSS-CONTRACT.md  VAL-TELE-overlay-view-contract.md  val-foundation.md
docs/contracts/: VAL-EDIT-contract.md
src/: App.test.tsx  App.tsx  index.css  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: hotkeys.rs  mod.rs  script.rs  window_mode.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/editor/: EditorView.test.tsx  EditorView.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx
src/lib/: displayBounds.test.ts  displayBounds.ts  events.test.ts  events.ts  ipc.test.ts  ipc.ts  scriptStats.test.ts  scriptStats.ts  windowRole.ts
src/settings/: HotkeyRecorder.test.tsx  HotkeyRecorder.tsx  SettingsModal.test.tsx  SettingsModal.tsx
src/store/: modeStore.test.ts  modeStore.ts  scriptStore.test.ts  scriptStore.ts  settingsStore.test.ts  settingsStore.ts
src/teleprompter/: ReadingLine.test.tsx  ReadingLine.tsx  TeleprompterView.test.tsx  TeleprompterView.tsx  useAutoScroll.test.ts  useAutoScroll.ts  viewportMath.test.ts  viewportMath.ts
src/test/: setup.ts
src/ui/: BrandMark.test.tsx  BrandMark.tsx  ChannelLabel.test.tsx  ChannelLabel.tsx  Frame.test.tsx  index.ts  (+15 more)
(+44 files in other folders)
